--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,14 +9,14 @@
 $red-color: #ff3636 !default;
 $red-color-dark: #b71c1c !default;
 $orange-color: #f29105 !default;
-$blue-color: #0076df !default;
-$blue-color-dark: #00369f !default;
-$cyan-color: #2698ba !default;
+$blue-color: #5dafee !default;
+$blue-color-dark: #075888 !default;
+$cyan-color: #178fb4 !default;
 $light-cyan-color: color.adjust($cyan-color, $lightness: 25%);
 $green-color: #00ab37 !default;
 $green-color-lime: #b7d12a !default;
 $green-color-dark: #009f06 !default;
-$green-color-light: #ddffdd !default;
+$green-color-light: #0f1a0f !default;
 $green-color-bright: #11d68b !default;
 $purple-color: #b509ac !default;
 $light-purple-color: color.adjust($purple-color, $lightness: 25%);
